changed misspellings and added getTransaction
