# openapi.yaml
@@ -199,7 +199,7 @@ paths:
         - transactions
       summary: Get a collection of transactions
       description: GET to collection of transactions
-      operationId: getTransactins
+      operationId: getTransactions
       parameters:
         - name: transactionId
           in: query
@@ -222,6 +222,30 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Transactions not found"
+
+  /transactions/{transactionId}:
+    get:
+      tags:   
+        - transactions
+      summary: Get a details of a specific transaction
+      description: GET a details of a specific transaction
+      operationId: getTransaction
+      parameters:
+        - name: transactionId
+          in: query
+          description: ID of transaction to return
+          required: false
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Transaction not found"
+
 
   /fxorder:
     post:
